fixed position on mobile

--- a/src/resources/sass/pages/konto-new/_spelverktyg.scss
+++ b/src/resources/sass/pages/konto-new/_spelverktyg.scss
@@ -69,7 +69,7 @@
 		}
 		&__row--active .active-px-3 .profile__actions {
 			@media screen and (max-width: 599px) {
-				right: 32px;
+				right: 16px;
 			}
 		}
 		&__row {
